--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ animation:fade .5s;
 display:flex;
 padding:10px;
 border-top:1px solid #222;
+align-items:center;
 }
 
 input{
@@ -91,6 +92,8 @@ border-radius:10px;
 border:none;
 font-size:15px;
 }
+
+/* Buttons */
 
 button{
 background:gold;
@@ -102,32 +105,50 @@ cursor:pointer;
 font-weight:bold;
 }
 
-/* Recording */
+/* Recording indicator */
 
 .recording{
+
 color:red;
-font-size:12px;
-margin-left:10px;
+font-weight:bold;
+margin-left:8px;
+
 animation:pulse 1s infinite;
+
+}
+
+/* Microphone animation */
+
+.micActive{
+
+background:red!important;
+color:white;
+
 }
 
 /* Animations */
 
 @keyframes glow{
+
 0%{filter:drop-shadow(0 0 2px gold);}
 50%{filter:drop-shadow(0 0 12px gold);}
 100%{filter:drop-shadow(0 0 2px gold);}
+
 }
 
 @keyframes pulse{
+
 0%{opacity:.3}
 50%{opacity:1}
 100%{opacity:.3}
+
 }
 
 @keyframes fade{
+
 from{opacity:0;transform:translateY(10px);}
 to{opacity:1;}
+
 }
 
 </style>
@@ -154,17 +175,20 @@ to{opacity:1;}
 
 <button onclick="send()">Send</button>
 
-<button onclick="startVoice()">🎤</button>
+<button id="micBtn" onclick="startVoice()">🎤</button>
 
 <button onclick="speakLast()">🔊</button>
 
 <span id="rec" class="recording" style="display:none">
-● Recording...
+
+● Listening...
+
 </span>
 
 </div>
 
 </div>
+
 
 <script>
 
@@ -177,12 +201,12 @@ let lastReply="";
 let greet="✨ Namaste! I am KAALI — your mystical guide at DEJOIY. How may I assist you today? 🔮";
 
 document.getElementById("messages").innerHTML=
-
 "<div class='kaali'>"+greet+"</div>";
 
 history.push({role:"assistant",content:greet});
 
-/* Send */
+
+/* Send Message */
 
 async function send(){
 
@@ -204,6 +228,8 @@ history.push({role:"user",content:msg});
 box.innerHTML+=
 "<div class='kaali'>KAALI is thinking 🔮</div>";
 
+box.scrollTop=box.scrollHeight;
+
 let res=await fetch("/api/chat",{
 
 method:"POST",
@@ -221,11 +247,8 @@ let data=await res.json();
 box.removeChild(box.lastChild);
 
 history.push({
-
 role:"assistant",
-
 content:data.reply
-
 });
 
 lastReply=data.reply;
@@ -238,7 +261,7 @@ box.scrollTop=box.scrollHeight;
 }
 
 
-/* ENTER KEY */
+/* Enter key */
 
 document.getElementById("input")
 
@@ -255,17 +278,25 @@ function startVoice(){
 
 let rec=document.getElementById("rec");
 
+let mic=document.getElementById("micBtn");
+
 rec.style.display="inline";
 
-let speech=new webkitSpeechRecognition();
+mic.classList.add("micActive");
+
+let speech=new(window.SpeechRecognition||window.webkitSpeechRecognition)();
 
 speech.lang="en-IN";
+
+speech.interimResults=false;
 
 speech.start();
 
 speech.onresult=function(e){
 
 rec.style.display="none";
+
+mic.classList.remove("micActive");
 
 document.getElementById("input").value=
 e.results[0][0].transcript;
@@ -277,6 +308,8 @@ send();
 speech.onerror=function(){
 
 rec.style.display="none";
+
+mic.classList.remove("micActive");
 
 };
 
@@ -293,9 +326,16 @@ let clean=lastReply.replace(/[✨🔮😊📦🛒]/g,"");
 
 let speech=new SpeechSynthesisUtterance(clean);
 
-speech.pitch=1.3;
+/* Female Goddess Voice */
 
-speech.rate=.9;
+let voices=speechSynthesis.getVoices();
+
+speech.voice=
+voices.find(v=>v.name.includes("Female")) || voices[1];
+
+speech.pitch=1.4;
+speech.rate=.85;
+speech.volume=1;
 
 speech.lang="en-IN";
 
