--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 
 <title>KAALI AI</title>
@@ -31,8 +30,6 @@ display:flex;
 flex-direction:column;
 }
 
-/* Header */
-
 .header{
 text-align:center;
 padding:10px;
@@ -48,8 +45,6 @@ animation:glow 3s infinite;
 color:gold;
 font-size:22px;
 }
-
-/* Messages */
 
 #messages{
 flex:1;
@@ -72,7 +67,25 @@ border-radius:12px;
 margin:6px;
 }
 
-/* Input */
+.gotoBtn{
+
+display:inline-block;
+
+margin-top:10px;
+
+padding:8px 14px;
+
+background:gold;
+
+color:black;
+
+border-radius:8px;
+
+font-weight:bold;
+
+cursor:pointer;
+
+}
 
 .inputArea{
 display:flex;
@@ -88,8 +101,6 @@ border-radius:10px;
 border:none;
 font-size:15px;
 }
-
-/* Buttons */
 
 button{
 background:gold;
@@ -168,6 +179,7 @@ let started=false;
 async function send(){
 
 let input=document.getElementById("input");
+
 let msg=input.value.trim();
 
 if(!msg) return;
@@ -176,8 +188,6 @@ input.value="";
 
 let box=document.getElementById("messages");
 
-
-/* Greeting only after first interaction */
 
 if(!started){
 
@@ -192,16 +202,12 @@ started=true;
 }
 
 
-/* USER */
-
 box.innerHTML+="<div class='user'>"+msg+"</div>";
 
 history.push({role:"user",content:msg});
 
 
 box.innerHTML+="<div class='kaali'>KAALI is thinking...</div>";
-
-box.scrollTop=box.scrollHeight;
 
 
 let res=await fetch("/api/chat",{
@@ -235,20 +241,37 @@ return;
 }
 
 
-/* SHOW REPLY */
+/* SHOW */
 
 history.push({
+
 role:"assistant",
+
 content:data.reply
+
 });
 
 lastReply=data.reply;
 
-box.innerHTML+="<div class='kaali'>"+data.reply+"</div>";
+box.innerHTML+=
+"<div class='kaali'>"+data.reply+"</div>";
+
+
+/* GO TO BUTTON */
+
+if(data.goto){
+
+box.innerHTML+=
+
+"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Go To Page</div>";
+
+}
+
 
 box.scrollTop=box.scrollHeight;
 
 }
+
 
 
 /* ENTER */
@@ -256,11 +279,13 @@ box.scrollTop=box.scrollHeight;
 document.getElementById("input")
 
 .addEventListener("keydown",e=>{
+
 if(e.key==="Enter") send();
+
 });
 
 
-/* VOICE INPUT */
+/* VOICE */
 
 function startVoice(){
 
