--- a/index.html
+++ b/index.html
@@ -68,23 +68,14 @@ margin:6px;
 }
 
 .gotoBtn{
-
+margin-top:8px;
 display:inline-block;
-
-margin-top:10px;
-
-padding:8px 14px;
-
 background:gold;
-
 color:black;
-
+padding:8px 12px;
 border-radius:8px;
-
-font-weight:bold;
-
 cursor:pointer;
-
+font-weight:bold;
 }
 
 .inputArea{
@@ -114,7 +105,6 @@ font-weight:bold;
 
 .recording{
 color:red;
-font-weight:bold;
 margin-left:8px;
 animation:pulse 1s infinite;
 }
@@ -140,11 +130,8 @@ animation:pulse 1s infinite;
 <div class="container">
 
 <div class="header">
-
 <img src="kaali.png" class="logo">
-
 <div class="title">KAALI AI</div>
-
 </div>
 
 <div id="messages"></div>
@@ -173,9 +160,6 @@ let history=[];
 let lastReply="";
 let started=false;
 
-
-/* SEND */
-
 async function send(){
 
 let input=document.getElementById("input");
@@ -191,7 +175,7 @@ let box=document.getElementById("messages");
 
 if(!started){
 
-let greet="Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today?";
+let greet="Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today.";
 
 box.innerHTML+="<div class='kaali'>"+greet+"</div>";
 
@@ -208,7 +192,6 @@ history.push({role:"user",content:msg});
 
 
 box.innerHTML+="<div class='kaali'>KAALI is thinking...</div>";
-
 
 let res=await fetch("/api/chat",{
 
@@ -230,7 +213,7 @@ let data=await res.json();
 box.removeChild(box.lastChild);
 
 
-/* MAGIC NAVIGATION */
+/* Auto navigation */
 
 if(data.url){
 
@@ -241,7 +224,7 @@ return;
 }
 
 
-/* SHOW */
+/* Show reply */
 
 history.push({
 
@@ -251,19 +234,18 @@ content:data.reply
 
 });
 
+
 lastReply=data.reply;
+
 
 box.innerHTML+=
 "<div class='kaali'>"+data.reply+"</div>";
 
 
-/* GO TO BUTTON */
-
 if(data.goto){
 
 box.innerHTML+=
-
-"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Go To Page</div>";
+"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Open Page</div>";
 
 }
 
@@ -273,19 +255,13 @@ box.scrollTop=box.scrollHeight;
 }
 
 
-
 /* ENTER */
 
 document.getElementById("input")
-
 .addEventListener("keydown",e=>{
-
 if(e.key==="Enter") send();
-
 });
 
-
-/* VOICE */
 
 function startVoice(){
 
@@ -319,8 +295,6 @@ rec.style.display="none";
 }
 
 
-/* GODDESS VOICE */
-
 function speakLast(){
 
 if(!lastReply) return;
@@ -329,8 +303,8 @@ let clean=lastReply.replace(/[^a-zA-Z0-9 .]/g,"");
 
 let speech=new SpeechSynthesisUtterance(clean);
 
-speech.rate=.85;
-speech.pitch=1.3;
+speech.rate=.9;
+speech.pitch=1.2;
 speech.lang="en-IN";
 
 speechSynthesis.speak(speech);
