--- a/index.html
+++ b/index.html
@@ -160,6 +160,21 @@ let history=[];
 let lastReply="";
 let started=false;
 
+
+/* Convert Links To Clickable */
+
+function makeLinksClickable(text){
+
+return text.replace(
+/(https?:\/\/[^\s]+)/g,
+'<a href="$1" target="_parent" style="color:gold;font-weight:bold;">Open Link</a>'
+);
+
+}
+
+
+/* SEND */
+
 async function send(){
 
 let input=document.getElementById("input");
@@ -172,6 +187,8 @@ input.value="";
 
 let box=document.getElementById("messages");
 
+
+/* Greeting */
 
 if(!started){
 
@@ -186,12 +203,22 @@ started=true;
 }
 
 
+/* USER */
+
 box.innerHTML+="<div class='user'>"+msg+"</div>";
 
-history.push({role:"user",content:msg});
+history.push({
+role:"user",
+content:msg
+});
 
 
 box.innerHTML+="<div class='kaali'>KAALI is thinking...</div>";
+
+box.scrollTop=box.scrollHeight;
+
+
+/* API */
 
 let res=await fetch("/api/chat",{
 
@@ -210,10 +237,11 @@ messages:history
 
 let data=await res.json();
 
+
 box.removeChild(box.lastChild);
 
 
-/* Auto navigation */
+/* MAGIC NAVIGATION */
 
 if(data.url){
 
@@ -224,7 +252,7 @@ return;
 }
 
 
-/* Show reply */
+/* Save memory */
 
 history.push({
 
@@ -238,14 +266,23 @@ content:data.reply
 lastReply=data.reply;
 
 
-box.innerHTML+=
-"<div class='kaali'>"+data.reply+"</div>";
+/* CLICKABLE LINKS */
 
+let replyHTML = makeLinksClickable(data.reply);
+
+
+box.innerHTML+=
+"<div class='kaali'>"+replyHTML+"</div>";
+
+
+
+/* GoTo Button */
 
 if(data.goto){
 
 box.innerHTML+=
-"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Open Page</div>";
+
+"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Go To Page</div>";
 
 }
 
@@ -255,13 +292,19 @@ box.scrollTop=box.scrollHeight;
 }
 
 
-/* ENTER */
+
+/* ENTER KEY */
 
 document.getElementById("input")
+
 .addEventListener("keydown",e=>{
+
 if(e.key==="Enter") send();
+
 });
 
+
+/* VOICE INPUT */
 
 function startVoice(){
 
@@ -295,6 +338,8 @@ rec.style.display="none";
 }
 
 
+/* GODDESS VOICE */
+
 function speakLast(){
 
 if(!lastReply) return;
@@ -304,7 +349,7 @@ let clean=lastReply.replace(/[^a-zA-Z0-9 .]/g,"");
 let speech=new SpeechSynthesisUtterance(clean);
 
 speech.rate=.9;
-speech.pitch=1.2;
+speech.pitch=1.3;
 speech.lang="en-IN";
 
 speechSynthesis.speak(speech);
@@ -312,6 +357,6 @@ speechSynthesis.speak(speech);
 }
 
 </script>
-
 </body>
 </html>
+
