--- a/index.html
+++ b/index.html
@@ -68,14 +68,20 @@ margin:6px;
 }
 
 .gotoBtn{
-margin-top:8px;
+
+margin-top:10px;
 display:inline-block;
+
 background:gold;
 color:black;
-padding:8px 12px;
+
+padding:8px 14px;
+
 border-radius:8px;
-cursor:pointer;
+
 font-weight:bold;
+cursor:pointer;
+
 }
 
 .inputArea{
@@ -156,21 +162,36 @@ Listening...
 
 <script>
 
-let history=[];
+let history = JSON.parse(localStorage.getItem("kaaliMemory")) || [];
+
 let lastReply="";
+
 let started=false;
 
 
-/* Convert Links To Clickable */
+/* CLICKABLE LINKS */
 
 function makeLinksClickable(text){
 
 return text.replace(
+
 /(https?:\/\/[^\s]+)/g,
-'<a href="$1" target="_parent" style="color:gold;font-weight:bold;">Open Link</a>'
+
+'<a href="$1" target="_parent" style="color:gold;font-weight:bold;text-decoration:none;">Open Page</a>'
+
 );
 
 }
+
+
+/* SAVE MEMORY */
+
+function saveMemory(){
+
+localStorage.setItem("kaaliMemory",JSON.stringify(history));
+
+}
+
 
 
 /* SEND */
@@ -188,8 +209,6 @@ input.value="";
 let box=document.getElementById("messages");
 
 
-/* Greeting */
-
 if(!started){
 
 let greet="Namaste! I am KAALI, your mystical guide at DEJOIY. How may I assist you today.";
@@ -198,19 +217,18 @@ box.innerHTML+="<div class='kaali'>"+greet+"</div>";
 
 history.push({role:"assistant",content:greet});
 
+saveMemory();
+
 started=true;
 
 }
 
 
-/* USER */
-
 box.innerHTML+="<div class='user'>"+msg+"</div>";
 
-history.push({
-role:"user",
-content:msg
-});
+history.push({role:"user",content:msg});
+
+saveMemory();
 
 
 box.innerHTML+="<div class='kaali'>KAALI is thinking...</div>";
@@ -218,7 +236,6 @@ box.innerHTML+="<div class='kaali'>KAALI is thinking...</div>";
 box.scrollTop=box.scrollHeight;
 
 
-/* API */
 
 let res=await fetch("/api/chat",{
 
@@ -237,11 +254,11 @@ messages:history
 
 let data=await res.json();
 
-
 box.removeChild(box.lastChild);
 
 
-/* MAGIC NAVIGATION */
+
+/* REDIRECT */
 
 if(data.url){
 
@@ -252,7 +269,8 @@ return;
 }
 
 
-/* Save memory */
+
+/* SAVE */
 
 history.push({
 
@@ -262,29 +280,30 @@ content:data.reply
 
 });
 
+saveMemory();
+
 
 lastReply=data.reply;
 
 
-/* CLICKABLE LINKS */
 
-let replyHTML = makeLinksClickable(data.reply);
-
+let replyHTML=makeLinksClickable(data.reply);
 
 box.innerHTML+=
 "<div class='kaali'>"+replyHTML+"</div>";
 
 
 
-/* GoTo Button */
+/* BUTTON */
 
 if(data.goto){
 
 box.innerHTML+=
 
-"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Go To Page</div>";
+"<div class='gotoBtn' onclick=\"window.parent.location.href='"+data.goto+"'\">Open Page</div>";
 
 }
+
 
 
 box.scrollTop=box.scrollHeight;
@@ -293,7 +312,7 @@ box.scrollTop=box.scrollHeight;
 
 
 
-/* ENTER KEY */
+/* ENTER */
 
 document.getElementById("input")
 
@@ -304,7 +323,7 @@ if(e.key==="Enter") send();
 });
 
 
-/* VOICE INPUT */
+/* VOICE */
 
 function startVoice(){
 
@@ -338,6 +357,7 @@ rec.style.display="none";
 }
 
 
+
 /* GODDESS VOICE */
 
 function speakLast(){
@@ -350,6 +370,7 @@ let speech=new SpeechSynthesisUtterance(clean);
 
 speech.rate=.9;
 speech.pitch=1.3;
+
 speech.lang="en-IN";
 
 speechSynthesis.speak(speech);
@@ -357,6 +378,6 @@ speechSynthesis.speak(speech);
 }
 
 </script>
+
 </body>
 </html>
-
